testsuite/tests/properties/invalid_unique/not_hashable/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    @exported fun test(): Bool = node.token_start.singleton().unique()
}
